<resources>
    <string name="app_name" translatable="false">Ticket Scanner</string>
    <string name="permission_denied_camera">You need to allow access to the camera to use the scanner</string>
    <string name="logo">Garo\'s logo</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="cinema_hint">Cinema</string>
    <string name="hall_1">Hall 1</string>
    <string name="hall_2">Hall 2</string>
    <string name="hall_3">Hall 3</string>
    <string name="login">Login</string>
    <string name="wrong_email_error">Enter correct email</string>
    <string name="code_scanner_content_desc">Open QR code scanner</string>
    <string name="scanner_holder">Scanned: %1$d/%2$d</string>
    <string name="title_age_holder" translatable="false">%1$s (%2$d+)</string>
    <string name="sessions">Session</string>
    <string name="fill_entry_field_error">Fill in entry field</string>
    <string name="open_profile">Open profile</string>
    <string name="session_time_holder">Session %1$s</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="full_name_holder" translatable="false">%1$s %2$s</string>
    <string name="empty_sessions_notify">No sessions today</string>
    <string name="session_title_holder">Session %1$s</string>
    <string name="incorrect_ticket">There is no such ticket</string>
    <string name="correct_ticket">Ticket scanned successfully</string>
    <string name="scanner">Scanner</string>
    <string name="ticket_info_holder">Name: %1$s \nPlace: %2$s</string>
</resources>
