<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/fullNameHolder"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="Обоев Рулон Викторович" />

    <TextView
        android:id="@+id/emailHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="ultra-cassir@gmail.com"/>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorSeparator" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cinemaInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cinema_hint"
        android:layout_marginTop="24dp">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/hallGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:checkedButton="@id/hall1Btn">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hall1Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hall_1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="36dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hall2Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hall_2"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="36dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hall3Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hall_3"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="36dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <Button
            android:id="@+id/logoutBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/destructiveColor"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/logout"/>

    </RelativeLayout>

</LinearLayout>